[gd_scene load_steps=2 format=3 uid="uid://bdwnh588ui1n4"]

[ext_resource type="Script" path="res://display.gd" id="1_wf37e"]

[node name="Display" type="CanvasLayer"]
script = ExtResource("1_wf37e")

[node name="HealthBar" type="ProgressBar" parent="."]
modulate = Color(0.176471, 1, 0.176471, 1)
offset_right = 102.0
offset_bottom = 27.0
value = 50.0

[node name="HungerBar" type="ProgressBar" parent="."]
modulate = Color(1, 0.673254, 0.321224, 1)
offset_top = 27.0
offset_right = 102.0
offset_bottom = 54.0
value = 50.0

[node name="ThirstBar" type="ProgressBar" parent="."]
modulate = Color(0.270192, 0.575205, 1, 1)
offset_top = 54.0
offset_right = 101.0
offset_bottom = 81.0
value = 75.0
